# dns-checker

./: .dockerignore  .gitignore  DNS-Reputation-Analysis-Tool.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dnsreplay/: __init__.py  __main__.py  cache.py  cli.py  metrics.py  pcap_reader.py  rate_limiter.py  reputation.py  utils.py  writer.py
files/: Sample1.pcapng  Sample3.pcap
src/: main.py
tests/: test_cache.py  test_utils.py
