[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnsreplay"
version = "1.0.0"
description = "DNS Reputation Analysis Tool for PCAP traffic analysis"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "DNS Replay Team", email = "team@example.com"}
]
keywords = ["dns", "pcap", "security", "reputation", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
]

dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "scapy>=2.5.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
    "asyncio-throttle>=1.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
dnsreplay = "dnsreplay.cli:app"

[project.urls]
Homepage = "https://github.com/uzibiton/dns-checker"
Repository = "https://github.com/uzibiton/dns-checker.git"
Issues = "https://github.com/uzibiton/dns-checker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dnsreplay*"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=dnsreplay --cov-report=term-missing"
asyncio_mode = "auto"
